--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,6 +1,3 @@
-/* * { */
-/*   outline: 1px solid pink; */
-/* } */
 body {
   font-size: 85%;
   margin: 0px auto;
@@ -84,7 +81,7 @@ body {
   left: 20px;
   padding-left: 0px;
   background-color: #7c807c;
-  width: 150px;
+  width: 130px;
 }
 
 .sub-nav-list li {
@@ -97,11 +94,12 @@ body {
 
 .sub-nav-list li:hover {
   background-color: lightgrey;
+  border-left: 3px solid #7c807c;
 }
 
 .sub-nav-list a {
   display: block;
-  padding: 5px 50px 5px 5px;
+  padding: 5px 10px 5px 15px;
 }
 
 /* .active > a { */
@@ -127,6 +125,7 @@ h1.main_title {
 }
 .long_input_bar {
   width: 80%;
+  margin-bottom: 10px;
 }
 .side_checkbox {
   clear: left;
@@ -193,7 +192,18 @@ h2.no_bottom_margin {
   padding-left: 40px; 
 }
 
-@media (max-width: 850px) {
+.page-note {
+  color: #0b6caa;
+  background-color: #dde4e9;
+  font-size: 80%;
+  border-left: 5px inset #0b6caa;
+  /* border-radius: 5px 5px 5px 5px; */
+  padding: 5px 10px 5px 10px;
+  width: 50%;
+  line-height: 1.5em;
+}
+
+@media (max-width: 900px) {
   .logo { display: none; }
   .nav { width: 100%; padding-left: 50px; margin-top: 10px; }
   .nav > ul { margin-left: 0px; }
