--- a/app/css/main.css
+++ b/app/css/main.css
@@ -80,7 +80,7 @@ body {
   /* top: 100%; */
   left: 20px;
   padding-left: 0px;
-  background-color: #7c807c;
+  background-color: #f8f8ff;
   width: 130px;
 }
 
@@ -90,6 +90,7 @@ body {
   float: none;
   position: relative;
   padding: 5px 0px 5px 0px;
+  border-left: 3px solid #f8f8ff;
 }
 
 .sub-nav-list li:hover {
