--- a/app/css/main.css
+++ b/app/css/main.css
@@ -2,7 +2,8 @@ body {
   font-size: 85%;
   margin: 0px auto;
   margin-bottom: 40px;
-  font-family: arial, sans-serif;
+  font-family: Helvetica, Tahoma, Arial, STXihei, "华文细黑", Heiti, "黑体", "Microsoft YaHei", "微软雅黑", SimSun, "宋体", sans-serif;
+  background-color: #f2f2f2;
 }
 
 .header {
@@ -117,7 +118,7 @@ h1.main_title {
 
 .container {
   position: relative;
-  top: 150px;
+  top: 140px;
   z-index: 1;
 }
 
@@ -198,7 +199,7 @@ h2.no_bottom_margin {
   background-color: #dde4e9;
   font-size: 80%;
   border-left: 5px inset #0b6caa;
-  /* border-radius: 5px 5px 5px 5px; */
+  border-radius: 5px 5px 5px 5px;
   padding: 5px 10px 5px 10px;
   width: 50%;
   line-height: 1.5em;
@@ -208,4 +209,38 @@ h2.no_bottom_margin {
   .logo { display: none; }
   .nav { width: 100%; padding-left: 50px; margin-top: 10px; }
   .nav > ul { margin-left: 0px; }
+}
+
+.main-page-feature {
+  margin-top: 50px;
+  text-align: center;
+  font-size: 150%;
+}
+.flex-box {
+  font-family: georgia, sarif;
+  font-size: 135%;
+  text-align: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 60%;
+  margin: 0px auto;
+}
+
+.float-elem {
+  text-align: center;
+  /* padding: 5%; */
+  margin: 10px;
+  /* background-color: #1de9b6; */
+  /* border-radius: 50% 50% 50% 50%; */
+  width: 12%;
+}
+
+.float-elem h1 {
+  padding-left: 0px;
+}
+.main-page-button {
+  text-align: center;
+  margin:60px auto;
+
 }
