--- a/app/css/main.css
+++ b/app/css/main.css
@@ -244,3 +244,23 @@ h2.no_bottom_margin {
   margin:60px auto;
 
 }
+
+.main-anchor {
+  margin: 100px auto;
+  text-align: center;
+}
+
+.main-anchor a {
+  font-size: 115%;
+  padding: 30px 60px;
+  line-height: 40px;
+  /* background-image: linear-gradient(red, blue); */
+  background-color: rgba(157, 188, 173, 0.7);
+  border-bottom: 5px solid rgba(157, 188, 173, 1.0);
+  border-radius: 5px 5px 5px 5px;
+  text-decoration: none;
+}
+
+.main-anchor a:hover {
+  background-color: rgba(157, 188, 173, 1.0);
+}
