--- a/app/css/main.css
+++ b/app/css/main.css
@@ -157,11 +157,14 @@ thead th {
   border-bottom: 2px solid #111111;
   letter-spacing: 0.1em;
 }
-th.md_tab_col {
+.md_tab_col {
   width: 10%;
 }
-th.sm_tab_col {
+.sm_tab_col {
   width: 8%;
+}
+.lg_tab_col {
+  line-height: 1.5em;
 }
 
 tbody tr {
