--- a/app/css/main.css
+++ b/app/css/main.css
@@ -2,7 +2,8 @@ body {
   font-size: 85%;
   margin: 0px auto;
   margin-bottom: 40px;
-  font-family: Helvetica, Tahoma, Arial, STXihei, "华文细黑", Heiti, "黑体", "Microsoft YaHei", "微软雅黑", SimSun, "宋体", sans-serif;
+  /* font-family: Helvetica, Tahoma, Arial, STXihei, "华文细黑", Heiti, "黑体", "Microsoft YaHei", "微软雅黑", SimSun, "宋体", sans-serif; */
+  font-family: Helvetica, Tahoma, Arial, STXihei, Heiti, "Microsoft YaHei", "微软雅黑", SimSun, "宋体", sans-serif;
   background-color: #f2f2f2;
 }
 
