--- a/app/css/main.css
+++ b/app/css/main.css
@@ -217,11 +217,12 @@ h2.no_bottom_margin {
 
 .main-page-container {
   position: absolute;
+  width: 100%;
   top: 0; right: 0; bottom: 0; left: 0;
-  background: linear-gradient(0deg, rgba(0,0,0,.05) 1px, transparent 1px),
-  linear-gradient(0deg, rgba(0,0,0,.1) 1px, transparent 1px),
-  linear-gradient(90deg, rgba(0,0,0,.05) 1px, transparent 1px),
-  linear-gradient(90deg, rgba(0,0,0,.1) 1px, transparent 1px);
+  background: linear-gradient(0deg, rgba(0,0,0,0.05) 1px, transparent 1px),
+  linear-gradient(0deg, rgba(0,0,0,0.1) 1px, transparent 1px),
+  linear-gradient(90deg, rgba(0,0,0,0.05) 1px, transparent 1px),
+  linear-gradient(90deg, rgba(0,0,0,0.1) 1px, transparent 1px);
   background-size: 10px 10px, 50px 50px, 10px 10px, 50px 50px;
 }
 
