--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,3 +1,6 @@
+body {
+  padding-top: 70px;
+}
 .flex-box {
   display: flex;
   justify-content: space-around;
@@ -15,3 +18,5 @@
 .no-padding-left {
   padding-left: 0;
 }
+
+/*# sourceMappingURL=main.css.map */
