--- a/app/css/main.less
+++ b/app/css/main.less
@@ -1,3 +1,20 @@
+/*
+ * rules for style
+ */
+
+.jumbotron {
+  text-align: center;
+}
+.button-link {
+  color: white;
+  text-decoration: none;
+}
+
+
+/*
+ * rules for layout
+ */
+
 body {
   padding-top: 70px;
 }
@@ -5,12 +22,8 @@ body {
   display: flex;
   justify-content: space-around;
 }
-.jumbotron {
-  text-align: center;
-}
-.button-link {
-  color: white;
-  text-decoration: none;
+.margin-bottom {
+  margin-bottom: 10px;
 }
 .margin-top-md {
   margin-top: 50px;
