--- a/app/css/main.less
+++ b/app/css/main.less
@@ -2,7 +2,7 @@
  * rules for style
  */
 
-.jumbotron {
+.text-center {
   text-align: center;
 }
 .button-link {
@@ -30,4 +30,28 @@ body {
 }
 .no-padding-left {
   padding-left: 0;
+}
+
+
+/*
+ * rules facilities
+ */
+
+.jumbotron {
+  .text-center;
+}
+
+.styled-list li {
+  list-style:none;
+  .no-padding-left;
+}
+.styled-list li:before {
+  .no-padding-left;
+  content: "";
+  display:inline-block;
+  width: 0.7em;
+  height: 0.7em;
+  border-radius: 50%;
+  background-color: pink;
+  margin-right: 3px;
 }
