--- a/app/css/main.less
+++ b/app/css/main.less
@@ -1,5 +1,6 @@
-@deep-orange: #F57C00;
-@primary-red: #F44336;
+@deep-orange: #f57c00;
+@primary-red: #f44336;
+@primary-gray: #eeeeee;
 /*
  * rules for style
  */
@@ -16,19 +17,12 @@
   // set font-weight to 500
   // to unify text stroke thickness
   // in all version of Windows
-  font-weight: 500;
-}
-.font-size-80 {
-  font-size: 100%;
 }
 
 /*
  * rules for layout
  */
 
-.padding-top {
-  padding-top: 70px;
-}
 .flex-box {
   display: flex;
   justify-content: space-around;
@@ -38,6 +32,18 @@
 }
 .margin-top-md {
   margin-top: 50px;
+}
+.no-margin-left {
+  margin-left: 0;
+}
+.no-margin-bottom {
+  margin-bottom: 0;
+}
+.padding-top-sm {
+  padding-top: 50px;
+}
+.padding-top-dym {
+  padding-top: 10%;
 }
 .no-padding-left {
   padding-left: 0;
@@ -49,10 +55,13 @@
  */
 
 body {
-  .padding-top;
+  .font-face;
+  .padding-top-sm;
 }
 .jumbotron {
+  .padding-top-dym;
   .text-center;
+  background-color: white;
 }
 .styled-list {
   .no-padding-left;
@@ -69,11 +78,15 @@ body {
   background-color: @primary-red;
   margin-right: 3px;
 }
-h1,
-h2,
-h3,
-h4,
-h5 {
-  .font-face;
-  // .font-size-80;
+.h1-sm {
+  font-size: 30px;
+}
+.h2-sm {
+  font-size: 24px;
+}
+.form-control {
+  font-weight: light;
+}
+.navbar {
+  .no-margin-bottom;
 }
