--- a/app/css/main.less
+++ b/app/css/main.less
@@ -1,6 +1,9 @@
 @deep-orange: #f57c00;
 @primary-red: #f44336;
 @primary-gray: #eeeeee;
+@dark-indigo: #303f9f;
+@light-indigo: #3f51b5;
+
 /*
  * rules for style
  */
@@ -17,6 +20,9 @@
   // set font-weight to 500
   // to unify text stroke thickness
   // in all version of Windows
+}
+.border-bottom-thick {
+  border-bottom: 5px @dark-indigo solid;
 }
 
 /*
