--- a/app/css/main.less
+++ b/app/css/main.less
@@ -27,9 +27,6 @@
 }
 .font-face {
   font-family: "Microsoft YaHei", "Arial", "Verdana", "Tahoma";
-  // set font-weight to 500
-  // to unify text stroke thickness
-  // in all version of Windows
 }
 .h1-sm {
   font-size: 30px;
@@ -129,4 +126,7 @@ body {
 }
 .glyphicon-th-large {
   color: @dark-red;
+}
+label {
+  font-weight: normal;
 }
