--- a/app/css/main.less
+++ b/app/css/main.less
@@ -118,14 +118,17 @@ body {
   .border-left-thick;
   .padding-left-sm;
 }
-.glyphicon-chevron-left,
-.glyphicon-chevron-right,
-.glyphicon-th-large {
+.logo-gly,
+.main-gly,
+.title-gly {
   color: @dark-red;
-  vertical-align: bottom;
 }
-.glyphicon-th-large {
-  color: @dark-red;
+.logo-gly {
+  vertical-align: baseline;
+}
+.title-gly,
+.main-gly {
+  vertical-align: bottom;
 }
 label {
   font-weight: normal;
